--- a/virtual-keyboard/src/css/style.css
+++ b/virtual-keyboard/src/css/style.css
@@ -10,9 +10,13 @@ body {
   flex-direction: column;
   justify-content: space-between;
   min-width: 320px;
+  height: 100vh;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 18px;
   color: #000;
+  background: 
+    linear-gradient(rgba(135, 60, 255, 0.4), rgba(135, 60, 255, 0.0) 80%),
+    linear-gradient(-45deg, rgba(120, 155, 255, 0.9) 25%, rgba(255, 160, 65, 0.9) 75%);
 }
 
 .wrapper {
@@ -21,50 +25,91 @@ body {
   padding: 50px;
 }
 
-.display {
-  padding: 10px;
-  background-color: #8a2be2;
-  border-radius: 10px;
-  box-shadow: 0 0 5px #979797;
+.title {
+  margin-bottom: 20px;
+  color: #dadada;
+  text-shadow: 0 0 5px #000;
 }
 
-.display_textarea {
+.display {
   width: 100%;
-  height: 400px;
+  margin: 10px 0;
   padding: 10px;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
+  box-shadow: 0 0 5px #979797;
+  resize: none;
+  font-size: 18px;
+}
+
+.display:focus {
+  outline: none;
 }
 
 .keyboard {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 960px;
   padding: 10px;
-  background: #8a2be2;
+  background: #dadada;
+  border-radius: 10px;
   box-shadow: 0 0 5px #979797;
   user-select: none;
 }
 
-.keyboard__keys {
-  text-align: center;
+.keyboard__row {
+  display: flex;
+  gap: 10px;
 }
 
 .keyboard__key {
   position: relative;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 50px;
   height: 50px;
-  margin: 3px;
+  padding: 5px;
   background-color: #fff;
   border-radius: 5px;
   border: 1px solid #a7a7a7;
   box-shadow: 0 0 5px #888;
-  font-size: 20px;
+  font-size: 18px;
+  cursor: pointer;
   transition: 0.3s;
 }
 
-.keyboard__key:active {
+.key-shift {
+  align-self: flex-start;
+  opacity: 0.3;
+}
+
+[data-fn="true"] {
+  flex-grow: 1;
+}
+
+[data-fn="true"] > .key-title {
+  font-size: 16px;
+}
+
+[data-code="ArrowLeft"],
+[data-code="ArrowUp"],
+[data-code="ArrowDown"],
+[data-code="ArrowRight"] {
+  flex-grow: 0;
+}
+
+[data-code="Enter"] {
+  flex-grow: 2;
+}
+
+[data-code="Space"] {
+  flex-grow: 11;
+}
+
+.active {
   background-color: rgba(138, 43, 226, 0.2);
 }
 
