--- a/virtual-keyboard/src/css/style.css
+++ b/virtual-keyboard/src/css/style.css
@@ -78,7 +78,8 @@ body {
   box-shadow: 0 0 5px #888;
   font-size: 18px;
   cursor: pointer;
-  transition: 0.3s;
+  transform: scale(1);
+  transition: 0.2s;
 }
 
 .key-shift {
@@ -111,6 +112,7 @@ body {
 
 .active {
   background-color: rgba(138, 43, 226, 0.2);
+  transform: scale(0.97);
 }
 
 .keyboard__key_activatable::after {
