--- a/virtual-keyboard/src/css/style.css
+++ b/virtual-keyboard/src/css/style.css
@@ -27,8 +27,9 @@ body {
 
 .title {
   margin-bottom: 20px;
-  color: #dadada;
-  text-shadow: 0 0 5px #000;
+  color: rgba(255, 255, 255, 0.8);
+  text-shadow: 0 0 5px #979797;
+  /* text-shadow: 0 0 5px #000; */
 }
 
 .display {
@@ -38,6 +39,7 @@ body {
   border: none;
   border-radius: 10px;
   box-shadow: 0 0 5px #979797;
+  background-color: rgba(255, 255, 255, 0.6);
   resize: none;
   font-size: 18px;
 }
@@ -52,7 +54,8 @@ body {
   gap: 10px;
   width: 960px;
   padding: 10px;
-  background: #dadada;
+  /* background: #dadada; */
+  background: rgba(218, 218, 218, 0.6);
   border-radius: 10px;
   box-shadow: 0 0 5px #979797;
   user-select: none;
@@ -72,7 +75,7 @@ body {
   width: 50px;
   height: 50px;
   padding: 5px;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.8);
   border-radius: 5px;
   border: 1px solid #a7a7a7;
   box-shadow: 0 0 5px #888;
@@ -120,7 +123,7 @@ body {
 }
 
 .active {
-  background-color: rgba(138, 43, 226, 0.2);
+  background-color: rgba(133, 154, 255, 0.5);
   transform: scale(0.97);
 }
 
